--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -106,19 +106,19 @@ ru:
             var: ref_to_how_to_find_right_help
           question: Как работает clarat?
         question_4:
-          answer: clarat есть и будет бесплатным. Каждый может в категории <b>clarat family</b> бесплатно искать помощь для детей, подростков и семей. И так же каждый может в <b>clarat refugees</b> бесплатно искать помощь для беженцев.
+          answer: clarat есть и будет бесплатным. Каждый может в категории <b>clarat family</b> бесплатно искать помощь для детей, подростков и семей. И каждый может в <b>clarat refugees</b> бесплатно искать помощь для беженцев.
           question: Поиск на странице clarat бесплатный?
         question_5:
-          answer: Поиск на странице clarat всегда анонимный. Это значит что никто в clarat не узнает твоего имени и адреса.
+          answer: Поиск на странице clarat всегда анонимный. Это значит, что никто в clarat не узнает твоего имени и адреса.
           question: Поиск на станице clarat анонимный?
         question_6:
-          answer: Мы регулярно проверяем актуальность информации на странице clarat. Потому что только так clarat может помочь детям, подросткам, семьям и беженцам. Если информация не актуальная, мы её обновляем. Это значит, что мы её заменяем.
+          answer: Мы регулярно проверяем актуальность информации на странице clarat. Потому что только так clarat может помочь детям, подросткам, семьям и беженцам. Если информация не актуальная, мы её обновляем. Это значит, что мы её меняем на новую.
           question: Информация на странице clarat актуальная?
         question_7:
           answer: Ты всегда и везде можешь воспользоваться некоторыми предложениями в разделах <b>clarat family</b> и <b>clarat refugees</b>. Независимо от того, где ты живёшь. Есть много предложений, в рамках которых ты можешь получить помощь по телефону или в интернете. Это значит, по электронной почте, в чате или в форуме. Множеством других предложений ты можешь воспользоваться там, где ты живёшь. В разделе <b>clarat refugees</b> ты можешь найти предложения для многих городов Германии. На данный момент это Берлин, Кёльн и Дюссельдорф. Будучи <b>clarat family</b>, мы начали с Берлина. Здесь есть очень много предложений. Но мы и дальше собираем информацию. Вскоре мы будем в других больших городах Германии.
-          question: Существует clarat во всей Германии?
+          question: clarat есть во всей Германии?
         question_8:
-          answer: clarat помогает тебе найти помощь в твоей округе. Здесь ты найдёшь обзор всей возможной помощи по близости с одного взгляда. Кроме того, мы говорим тебе что точно ты должен/должна сделать чтобы получить помощь. Мы всегда пишем на упрощённом языке. Этот упрощенный стиль понятен всем. В clarat должны найти помощь даже те люди, которые не очень хорошо говорят по-немецки. Всю информацию ты можешь также прочитать на многих других языках. Если ты хочешь больше узнать об этом, нажми %{ref_to_how_many_languages}.
+          answer: clarat поможет тебе найти помощь поблизости. Здесь ты сразу найдёшь обзор всей возможной помощи. Кроме того, мы объясним тебе, что точно ты должен сделать для того, чтобы получить нужную помощь. Мы всегда пишем на упрощённом языке. Этот упрощенный язык понятен всем. Потому что те люди, которые не очень хорошо говорят по-немецки, должны иметь возможность найти помощь на clarat. Всю информацию ты также можешь прочитать на многих других языках. Если ты хочешь больше узнать об этом, нажми %{ref_to_how_many_languages}.
           link_1:
             class: FAQ_anchor_link
             name: здесь
@@ -160,7 +160,7 @@ ru:
             </li>
             </ul>
             </p>
-            В clarat так же могут обращаться те, кто хочет предложить пмощь. Например воспитатели, учителя или соседи и знакомые.
+            В clarat так же могут обращаться те, кто хочет предложить помощь. Например воспитатели, учителя или соседи и знакомые.
           question: Кто находит помощь в clarat?
         question_10:
           answer: |-
@@ -1268,9 +1268,9 @@ ru:
     home:
       how:
         heading: Kак работает clarat?
-        text: Напиши, в чем именно у тебя проблемы. Или что тебя волнует. Либо выбери из предложенных тем. Ты сразу же найдешь рядом с тобой по близости все возможные варианты помощи и поддержки. Мы так же расскажем тебе, как ты можешь получить эту помощь. Позвони, напиши email или просто приходи.
+        text: Напиши, в чем именно заключается твоя проблема. Или что тебя волнует. Или выбери из предложенных тем. И ты сразу найдешь все возможные варианты помощи и поддержки поблизости. Мы также расскажем тебе, как ты можешь получить эту помощь. Например, нужно ли позвонить, написать email или прийти лично.
       meta_description:
-        family: 
+        family: 'С помощью clarat family ты быстро найдешь поддержку. Для детей, молодежи и семей. В интернете. '
         refugees: 
       meta_title:
         family: 
