--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -306,6 +306,8 @@ ar:
     current_location: موقعي
     default_latlng: 52.520007,13.404954
     default_location: برلين
+    en:
+      current_location: 
   confidential: 
   contacts:
     create:
@@ -1334,3 +1336,6 @@ ar:
     new:
       button: الرسالة وصلت
       email_placeholder: عنوان البريد الإليكتروني
+  de:
+    en:
+      current_location: 
