--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -376,6 +376,8 @@ fa:
     current_location: محل سکونت من
     default_latlng: 52.520007,13.404954
     default_location: برلین
+    en:
+      current_location: 
   confidential: 
   contacts:
     create:
@@ -1359,3 +1361,6 @@ fa:
     new:
       button: پیغام دریافت شد
       email_placeholder: آدرس ایمیل
+  de:
+    en:
+      current_location: 
