--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -451,6 +451,8 @@ pl:
     current_location: Moja lokalizacja
     default_latlng: 52.520007,13.404954
     default_location: Berlin
+    en:
+      current_location: 
   confidential: 
   contacts:
     create:
@@ -1441,3 +1443,6 @@ pl:
     new:
       button: Wiadomość otrzymana
       email_placeholder: adres e-mail
+  de:
+    en:
+      current_location: 
